@@ -38,6 +38,11 @@
    Previously used a hardcoded 7-character hash length.
    (Jelmer Vernooĳ, #824)
 
+ * ParamikoSSHVendor now reads SSH configuration from ~/.ssh/config.
+   Host settings including hostname, user, port, and identity file are
+   now respected when establishing SSH connections.
+   (Jelmer Vernooĳ, #443)
+
 0.23.1	2025-06-30
 
  * Support ``untracked_files="normal"`` argument to ``porcelain.status``,
